[project]
name = "circle-gen-cell-a"
version = "0.1.0"
description = "Fresh restart after archived 2025 attempt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pygame>=2.5",
]

[project.scripts]
circle-gen = "circle_gen_cell_a.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/circle_gen_cell_a"]
